# autonomous-ground-vehicle-sim

./: .gitignore  CMakeLists.txt  README.md
out_moving/: control.csv  events.csv  plan.csv  state.csv  target_est.csv  truth.csv
out_replan/: control.csv  events.csv  map.csv  plan.csv  state.csv  target_est.csv  truth.csv
out_smoke/: expected.txt
out_smoke/moving/: map.csv  stderr.txt  truth.csv
out_smoke/replan/: control.csv  events.csv  state.csv  stderr.txt  target_est.csv  truth.csv
out_smoke/static/: control.csv  events.csv  state.csv  stderr.txt  target_est.csv  truth.csv
out_static/: control.csv  events.csv  plan.csv  state.csv  target_est.csv  truth.csv
scripts/: expected.txt  smoke.sh
src/: main.cpp
src/sim/: config.h  csv.h  fnv1a.h  rng.h
src/sim/control/: pid.h  pure_pursuit.cpp  pure_pursuit.h
src/sim/math/: vec2.h
src/sim/planning/: astar.cpp  astar.h
src/sim/sensors/: gps.cpp  gps.h  lidar2d.cpp  lidar2d.h  radar2d.cpp  radar2d.h
src/sim/tracking/: alpha_beta_tracker.cpp  alpha_beta_tracker.h  tracker_iface.h
src/sim/vehicle/: kinematic_bicycle.cpp  kinematic_bicycle.h  vehicle_state.h
src/sim/world/: grid_map.cpp  grid_map.h
tools/: plot_run.py
